# axum-gate

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  deny.toml  flake.nix
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
examples/leptos-integration/: Cargo.toml
examples/leptos-integration/src/: app.rs  lib.rs  main.rs  protected.rs
examples/oauth2-github/: Cargo.toml
examples/oauth2-github/src/: main.rs
examples/prometheus/: README.md
examples/sea-orm/: Cargo.toml
examples/sea-orm/src/: main.rs
src/: comma_separated_value.rs  lib.rs  roles.rs
src/accounts/: account_delete.rs  account_repository.rs  mod.rs
src/groups/: group_repository.rs  mod.rs
src/permissions/: mod.rs
src/permissions/mapping/: mod.rs
src/repositories/: memory.rs  mod.rs  sea_orm.rs  surrealdb.rs
src/repositories/memory/: account.rs  group.rs  permission_mapping.rs  secret.rs
src/repositories/sea_orm/: account.rs  group.rs  models.rs  permission_mapping.rs  secret.rs
src/repositories/sea_orm/models/: account.rs  credentials.rs  group.rs  permission_mapping.rs
src/repositories/surrealdb/: account.rs  group.rs  permission_mapping.rs  secret.rs
tests/: authorization_security_tests.rs  permission_mappings_bulk.rs  permission_mappings_surrealdb.rs  security_tests.rs  storage_and_cookie_security_tests.rs  timing_repositories.rs
